feat: 前后端接口对接与数据对齐
后端修改:
- 新增 ScenarioQuestion 实体类存储场景问题
- 新增 ScenarioQuestionRepository 数据访问接口
- 修改 ScenarioDTO 添加 questions 字段
- 修改 ScenarioServiceImpl 获取场景时包含问题列表
- 更新 DataInitializer 初始化完整场景和问题数据

前端修改:
- 新增 api.ts API 服务层封装
- 新增 .env.development/.env.production 环境变量配置
- 修改 App.vue 集成 API 调用逻辑
- 添加 API 模式开关(USE_API_MODE)，支持本地/远程切换