@@ -2,6 +2,8 @@ package com.lingoai.service.impl;
 
 import com.lingoai.dto.response.ScenarioDTO;
 import com.lingoai.entity.Scenario;
+import com.lingoai.entity.ScenarioQuestion;
+import com.lingoai.repository.ScenarioQuestionRepository;
 import com.lingoai.repository.ScenarioRepository;
 import com.lingoai.service.ScenarioService;
 import lombok.RequiredArgsConstructor;
@@ -9,7 +11,6 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * 场景服务实现类
@@ -20,14 +21,15 @@ import java.util.stream.Collectors;
 public class ScenarioServiceImpl implements ScenarioService {
 
     private final ScenarioRepository scenarioRepository;
+    private final ScenarioQuestionRepository scenarioQuestionRepository;
 
     @Override
     public List<ScenarioDTO> getAllScenarios() {
         log.debug("获取所有场景");
-        return scenarioRepository.findAllByOrderByDifficultyAsc()
-                .stream()
-                .map(ScenarioDTO::fromEntity)
-                .collect(Collectors.toList());
+        List<Scenario> scenarios = scenarioRepository.findAllByOrderByDifficultyAsc();
+        return scenarios.stream()
+                .map(ScenarioDTO::fromEntitySimple)
+                .toList();
     }
 
     @Override
@@ -35,7 +37,8 @@ public class ScenarioServiceImpl implements ScenarioService {
         log.debug("获取场景: {}", id);
         Scenario scenario = scenarioRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("场景不存在: " + id));
-        return ScenarioDTO.fromEntity(scenario);
+        List<ScenarioQuestion> questions = scenarioQuestionRepository.findByScenarioIdOrderByOrderIndexAsc(id);
+        return ScenarioDTO.fromEntity(scenario, questions);
     }
 
 }
